--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,20 @@ button {
     margin-top: 30px;
     font-size: 16px;
 }
+
+.horizontal-ruler {
+    height: 0px;
+    border: 1px solid #D5D4D8;
+    width: 446px;
+    margin-top: 35px;
+}
+
+.pw-field {
+    height: 39px;
+    width: 211px;
+    background: #273549;
+    border-radius: 6px;
+    margin-top: 35px;
+    margin-right: 15px;
+    display: inline-block;
+}
