--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,10 @@ img:hover {
     height: 28px;
     width: 28px;
 }
+
+.copied {
+    display: inline;
+    color: #1C1C1C;
+    font-size: 12px;
+
+}
